--- a/3rdparty/libzip/CMakeLists.txt
+++ b/3rdparty/libzip/CMakeLists.txt
@@ -29,41 +29,43 @@ include(TestBigEndian)
 list(APPEND CMAKE_REQUIRED_DEFINITIONS -D__STDC_WANT_LIB_EXT1__=1)
 
 # Replaced these dynamic checks with static, otherwise XCode is slow to configure.
-set(HAVE__CLOSE ${MSVC})
-set(HAVE__DUP ${MSVC})
-set(HAVE__FDOPEN ${MSVC})
-set(HAVE__FILENO ${MSVC})
-set(HAVE__SETMODE ${MSVC})
-set(HAVE__SNPRINTF ${MSVC})
-set(HAVE__SNPRINTF_S ${MSVC})
-set(HAVE__SNWPRINTF_S ${MSVC})
-set(HAVE__STRDUP ${MSVC})
-set(HAVE__STRICMP ${MSVC})
-set(HAVE__STRTOI64 ${MSVC})
-set(HAVE__STRTOUI64 ${MSVC})
-set(HAVE__UNLINK ${MSVC})
+set(HAVE__CLOSE ${WIN32})
+set(HAVE__DUP ${WIN32})
+set(HAVE__FDOPEN ${WIN32})
+set(HAVE__FILENO ${WIN32})
+set(HAVE__SETMODE ${WIN32})
+set(HAVE__SNPRINTF ${WIN32})
+set(HAVE__SNPRINTF_S ${WIN32})
+set(HAVE__SNWPRINTF_S ${WIN32})
+set(HAVE__STRDUP ${WIN32})
+set(HAVE__STRICMP ${WIN32})
+set(HAVE__STRTOI64 ${WIN32})
+set(HAVE__STRTOUI64 ${WIN32})
+set(HAVE__UNLINK ${WIN32})
 set(HAVE_ARC4RANDOM ${APPLE})
 set(HAVE_CLONEFILE ${APPLE})
 set(HAVE_EXPLICIT_BZERO ${LINUX})
 set(HAVE_EXPLICIT_MEMSET ${LINUX})
 set(HAVE_FCHMOD ${UNIX})
 set(HAVE_FILENO TRUE)
-set(HAVE_FSEEKO ${UNIX})
-set(HAVE_FTELLO ${UNIX})
+if (UNIX OR MINGW)
+  set(HAVE_FSEEKO TRUE)
+  set(HAVE_FTELLO TRUE)
+endif()
 set(HAVE_GETPROGNAME ${APPLE})
 set(HAVE_LOCALTIME_R ${UNIX})
-set(HAVE_LOCALTIME_S ${MSVC})
-set(HAVE_MEMCPY_S ${MSVC})
+set(HAVE_LOCALTIME_S ${WIN32})
+set(HAVE_MEMCPY_S ${WIN32})
 set(HAVE_RANDOM ${UNIX})
 set(HAVE_SETMODE ${APPLE})
 set(HAVE_SNPRINTF TRUE)
 set(HAVE_SNPRINTF_S FALSE)
 set(HAVE_STRCASECMP ${UNIX})
 set(HAVE_STRDUP TRUE)
-set(HAVE_STRERROR_S ${MSVC})
+set(HAVE_STRERROR_S ${WIN32})
 set(HAVE_STRERRORLEN_S FALSE)
-set(HAVE_STRICMP ${MSVC})
-set(HAVE_STRNCPY_S ${MSVC})
+set(HAVE_STRICMP ${WIN32})
+set(HAVE_STRNCPY_S ${WIN32})
 set(HAVE_STRTOLL TRUE)
 set(HAVE_STRTOULL TRUE)
 
@@ -106,10 +108,10 @@ int main(int argc, char *argv[]) { }" HAVE_NULLABLE)
 
 set(WORDS_BIGENDIAN FALSE)
 
-if(MSVC)
+if(WIN32)
   add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
   add_compile_definitions(_CRT_NONSTDC_NO_DEPRECATE)
-endif(MSVC)
+endif(WIN32)
 
 # fixed size integral types
 
