--- a/pcsx2-qt/CMakeLists.txt
+++ b/pcsx2-qt/CMakeLists.txt
@@ -297,9 +297,13 @@ target_link_libraries(pcsx2-qt PRIVATE
 # Our Qt builds may have exceptions on, so force them off.
 target_compile_definitions(pcsx2-qt PRIVATE QT_NO_EXCEPTIONS)
 
-if(WIN32)
+if(MSVC)
 	target_sources(pcsx2-qt PRIVATE VCRuntimeChecker.cpp)
 	set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION "${CMAKE_SOURCE_DIR}/bin/translations")
+	qt_add_lrelease(pcsx2-qt TS_FILES ${TS_FILES})
+	copy_base_translations(pcsx2-qt)
+elseif(WIN32)
+	set_source_files_properties(${TS_FILES} PROPERTIES OUTPUT_LOCATION "translations")
 	qt_add_lrelease(pcsx2-qt TS_FILES ${TS_FILES})
 	copy_base_translations(pcsx2-qt)
 elseif(APPLE)
