make debugger optional

--- a/pcsx2-qt/CMakeLists.txt
+++ b/pcsx2-qt/CMakeLists.txt
@@ -83,15 +83,6 @@ target_sources(pcsx2-qt PRIVATE
 	Settings/ControllerSettingsWindow.h
 	Settings/ControllerSettingsWindow.ui
 	Settings/ControllerSettingWidgetBinder.h
-	Settings/DebugAnalysisSettingsTab.ui
-	Settings/DebugAnalysisSettingsWidget.cpp
-	Settings/DebugAnalysisSettingsWidget.h
-	Settings/DebugAnalysisSettingsWidget.ui
-	Settings/DebugGSSettingsTab.ui
-	Settings/DebugLoggingSettingsTab.ui
-	Settings/DebugUserInterfaceSettingsTab.ui
-	Settings/DebugSettingsWidget.cpp
-	Settings/DebugSettingsWidget.h
 	Settings/EmulationSettingsWidget.cpp
 	Settings/EmulationSettingsWidget.h
 	Settings/EmulationSettingsWidget.ui
@@ -170,6 +161,19 @@ target_sources(pcsx2-qt PRIVATE
 	Settings/USBBindingWidget_GunCon2.ui
 	Settings/USBBindingWidget_RyojouhenCon.ui
 	Settings/USBBindingWidget_ShinkansenCon.ui
+)
+
+if(USE_DEBUGGER)
+	target_sources(pcsx2-qt PRIVATE
+	Settings/DebugAnalysisSettingsTab.ui
+	Settings/DebugAnalysisSettingsWidget.cpp
+	Settings/DebugAnalysisSettingsWidget.h
+	Settings/DebugAnalysisSettingsWidget.ui
+	Settings/DebugGSSettingsTab.ui
+	Settings/DebugLoggingSettingsTab.ui
+	Settings/DebugUserInterfaceSettingsTab.ui
+	Settings/DebugSettingsWidget.cpp
+	Settings/DebugSettingsWidget.h
 	Debugger/AnalysisOptionsDialog.cpp
 	Debugger/AnalysisOptionsDialog.h
 	Debugger/AnalysisOptionsDialog.ui
@@ -255,6 +259,10 @@ target_sources(pcsx2-qt PRIVATE
 	Debugger/SymbolTree/SymbolTreeView.ui
 	Debugger/SymbolTree/TypeString.cpp
 	Debugger/SymbolTree/TypeString.h
+	)
+endif()
+
+target_sources(pcsx2-qt PRIVATE
 	Tools/InputRecording/NewInputRecordingDlg.cpp
 	Tools/InputRecording/NewInputRecordingDlg.h
 	Tools/InputRecording/NewInputRecordingDlg.ui
@@ -291,8 +299,12 @@ target_link_libraries(pcsx2-qt PRIVATE
 	Qt6::Gui
 	Qt6::GuiPrivate
 	Qt6::Widgets
-	KDAB::kddockwidgets
 )
+
+if(USE_DEBUGGER)
+	target_link_libraries(pcsx2-qt PRIVATE KDAB::kddockwidgets)
+	target_compile_definitions(pcsx2-qt PRIVATE USE_DEBUGGER)
+endif()
 
 # Our Qt builds may have exceptions on, so force them off.
 target_compile_definitions(pcsx2-qt PRIVATE QT_NO_EXCEPTIONS)
