--- a/3rdparty/winwil/CMakeLists.txt
+++ b/3rdparty/winwil/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(pcsx2-wil INTERFACE)
 target_include_directories(pcsx2-wil INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set_target_properties(pcsx2-wil PROPERTIES SYSTEM ON)
 add_library(WIL::WIL ALIAS pcsx2-wil)
